feat: Introduce sales and advertising analysis notebook and report, and add dataset description to FinTech LTV notebook.

--- a/notebooks/FinTech_Customer_Life_Time_Value.ipynb
+++ b/notebooks/FinTech_Customer_Life_Time_Value.ipynb
@@ -1,8 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "898e65a3",
+   "metadata": {},
+   "source": [
+    "핀테크(디지털 지갑) 고객 생애 가치(LTV) 분석 데이터셋\n",
+    "\n",
+    "설명:\n",
+    "이 데이터셋은 PayTM 및 Khalti와 같은 디지털 지갑 사용자의 고객 생애 가치(LTV)를 예측하는 데 중점을 둡니다. 약 7,000개의 샘플과 20가지 풍부한 특징(고객 인구 통계, 거래 내역, 참여 지표, 앱 사용 패턴, 지원 상호 작용 등)을 포함합니다.\n",
+    "\n",
+    "주요 특징:\n",
+    "*   **Customer_ID**: 각 고객의 고유 식별자.\n",
+    "*   **Age**: 고객의 연령 (18세 ~ 70세).\n",
+    "*   **Location**: 고객의 지리적 위치 (도시, 교외, 농촌).\n",
+    "*   **Income_Level**: 고객의 소득 분류 (낮음, 중간, 높음).\n",
+    "*   **Total_Transactions**: 고객의 총 거래 횟수.\n",
+    "*   **Avg_Transaction_Value**: 각 거래의 평균 가치 (루피).\n",
+    "*   **Total_Spent**: 고객이 지출한 총 금액 (루피).\n",
+    "*   **Max_Transaction_Value**: 기록된 최고 단일 거래 가치 (루피).\n",
+    "*   **Min_Transaction_Value**: 기록된 최저 단일 거래 가치 (루피).\n",
+    "*   **Active_Days**: 고객이 플랫폼에서 활동한 일수.\n",
+    "*   **Last_Transaction_Days_Ago**: 고객의 마지막 거래 이후 경과 일수.\n",
+    "*   **Loyalty_Points_Earned**: 고객이 획득한 총 로열티 포인트.\n",
+    "*   **Referral_Count**: 고객이 추천한 신규 고객 수.\n",
+    "*   **Cashback_Received**: 고객이 받은 총 캐시백.\n",
+    "*   **App_Usage_Frequency**: 앱 사용 빈도 (매일, 매주, 매월).\n",
+    "*   **Preferred_Payment_Method**: 고객이 가장 자주 사용하는 결제 수단.\n",
+    "*   **Support_Tickets_Raised**: 고객이 제기한 지원 티켓 수.\n",
+    "*   **Issue_Resolution_Time**: 고객 문제 해결에 걸린 평균 시간 (시간).\n",
+    "*   **Customer_Satisfaction_Score**: 고객 만족도를 나타내는 점수 (1-10).\n",
+    "*   **LTV**: 고객의 예상 생애 가치를 나타내는 목표 변수.\n",
+    "\n",
+    "활용:\n",
+    "이 데이터셋은 디지털 지갑 환경에서 LTV를 예측하는 회귀 모델을 개발하고 벤치마킹하는 데 이상적입니다. 비즈니스가 고객의 장기적 가치를 이해하고, 고객 유지 전략을 최적화하며, 마케팅 노력을 맞춤화하는 데 도움이 되는 모델을 훈련하는 데 사용될 수 있습니다.\n",
+    "\n",
+    "참고: 이 데이터셋은 실제 디지털 지갑 사용자 데이터를 모방하도록 구조화된 합성 데이터입니다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4810b940",
    "metadata": {},
    "outputs": [],
@@ -19,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6b1e7988",
    "metadata": {},
    "outputs": [
@@ -407,7 +445,7 @@
        "[7000 rows x 20 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
